[tool.poetry]
name = "oop-project"
version = "0.1.0"
description = ""
authors = ["tatyana kuleva <tatianaarsentievna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119

[tool.black]
line-length = 119
exclude = '''(\.git)'''

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'

